--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
   
+  <div id="app"></div>
+  <script type="module" src="/app.js"></script>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
-    <script type="module" src="/app.js"></script>
   </body>
 </html>
